--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+        </dependency>
+
 
         <!-- Shared version number properties -->
         <!-- Core utilities used by other modules.
