--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
     <dependencies>
 
         <dependency>
+            <groupId>de.huxhorn.lilith</groupId>
+            <artifactId>de.huxhorn.lilith.logback.encoder.classic</artifactId>
+            <version>0.9.44</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
