--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,36 @@
 
     <groupId>su.jambler</groupId>
     <artifactId>buyForMe</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
+    <name>Buy for Me Webapp</name>
 
     <build>
+        <finalName>bfm</finalName>
         <plugins>
+            <!-- Tomcat plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <configuration>
+                    <url>localhost:8080/manager</url>
+                    <path>/bfm</path>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*Tests.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
@@ -27,9 +47,24 @@
         <mockito.version>1.10.8</mockito.version>
         <junit.version>4.11</junit.version>
         <c3p0.version>0.9.1.2</c3p0.version>
+        <servlet.version>2.5</servlet.version>
+        <jsp.version>2.1</jsp.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>${jsp.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>de.huxhorn.lilith</groupId>
@@ -224,8 +259,5 @@
             <version>${org.springframework.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
-
 </project>
