--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,9 +13,6 @@
 
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
-		<url-pattern>*.html</url-pattern>
-		<url-pattern>*.htm</url-pattern>
-		<url-pattern>*.json</url-pattern>
-		<url-pattern>*.xml</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
