--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,17 @@
         <jsp.version>2.1</jsp.version>
         <tiles.version>3.0.5</tiles.version>
         <logback.version>1.1.2</logback.version>
+        <hsql.version>1.8.0.7</hsql.version>
+        <spring-data-jpa.version>1.7.1.RELEASE</spring-data-jpa.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsql.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
@@ -57,6 +65,14 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -121,12 +137,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.182</version>
-        </dependency>
-
-        <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.5</version>
@@ -136,6 +146,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
 
